Fix errors in EMI integration